fix(FormField): remove "hover-gap"

--- a/packages/components/src/components/FormField/FormField.module.scss
+++ b/packages/components/src/components/FormField/FormField.module.scss
@@ -8,7 +8,7 @@
 /* Elements */
 .label {
   order: 1;
-  margin-bottom: var(--form-control--label-to-control-spacing);
+  padding-bottom: var(--form-control--label-to-control-spacing);
 }
 
 .fieldError,
